[gd_scene load_steps=19 format=3 uid="uid://cfcmhdj054sqe"]

[ext_resource type="Script" path="res://03_scripts/03_UI/MainMenu.gd" id="1_77v5r"]
[ext_resource type="Texture2D" uid="uid://d227a8uaur7pc" path="res://01_assets/01_sprites/03_UI/Background.png" id="2_qgjhp"]
[ext_resource type="Texture2D" uid="uid://cspnj51jwyur3" path="res://01_assets/01_sprites/03_UI/Title.png" id="3_gn24h"]
[ext_resource type="Texture2D" uid="uid://cs5lkr2wk0jtv" path="res://01_assets/01_sprites/03_UI/BackGif01.png" id="3_nequp"]
[ext_resource type="Texture2D" uid="uid://cf5jrht86htey" path="res://01_assets/01_sprites/03_UI/BackGif02.png" id="4_yx8lb"]
[ext_resource type="Texture2D" uid="uid://08e0uhrwx56q" path="res://01_assets/01_sprites/03_UI/BackGif03.png" id="5_wbweq"]
[ext_resource type="Texture2D" uid="uid://cdt76t6c30uqf" path="res://01_assets/01_sprites/03_UI/Background02.png" id="6_r320i"]
[ext_resource type="Texture2D" uid="uid://dlwip8214ukye" path="res://01_assets/01_sprites/03_UI/Buttons/Normal.png" id="8_rsdn2"]
[ext_resource type="Texture2D" uid="uid://b0fdp0dlgajaa" path="res://01_assets/01_sprites/03_UI/Buttons/Pressed.png" id="9_8y1c4"]
[ext_resource type="Texture2D" uid="uid://b7gcup3qgw0ti" path="res://01_assets/01_sprites/03_UI/Buttons/Hovered.png" id="10_oru7d"]
[ext_resource type="LabelSettings" uid="uid://bhjg7yugc5g58" path="res://03_scripts/03_UI/ButtonLabelSettings.tres" id="11_njyvy"]
[ext_resource type="VideoStream" path="res://01_assets/01_sprites/03_UI/Tuto/Salto.ogv" id="12_scw4j"]
[ext_resource type="VideoStream" path="res://01_assets/01_sprites/03_UI/Tuto/Doblesalto.ogv" id="13_upulp"]
[ext_resource type="Texture2D" uid="uid://bj5bolxdhrn6x" path="res://01_assets/01_sprites/03_UI/Tuto/MarcoTutorial.png" id="14_kp23d"]
[ext_resource type="FontFile" uid="uid://0c8blrst4tvx" path="res://01_assets/02_fonts/typo_comica/Typo_Comica_demo.otf" id="15_wu85y"]
[ext_resource type="LabelSettings" uid="uid://d31e2v2ph2qrc" path="res://03_scripts/03_UI/TextLabelSettings.tres" id="16_yromt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_j4gqh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nequp")
}, {
"duration": 1.0,
"texture": ExtResource("4_yx8lb")
}, {
"duration": 1.0,
"texture": ExtResource("5_wbweq")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="CanvasTexture" id="CanvasTexture_73agi"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_77v5r")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_qgjhp")
expand_mode = 1

[node name="BackGift" type="AnimatedSprite2D" parent="Background"]
position = Vector2(640, 360)
scale = Vector2(0.666667, 0.666667)
sprite_frames = SubResource("SpriteFrames_j4gqh")
autoplay = "default"
frame_progress = 0.740623

[node name="TextureRect" type="TextureRect" parent="Background"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("6_r320i")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
clip_contents = true
layout_mode = 0
offset_left = 426.5
offset_top = 60.0
offset_right = 1036.5
offset_bottom = 916.0
scale = Vector2(0.7, 0.7)
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Background/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_gn24h")
stretch_mode = 5

[node name="Button_empezar" type="TextureButton" parent="Background/VBoxContainer"]
clip_children = 2
layout_mode = 2
texture_normal = ExtResource("8_rsdn2")
texture_pressed = ExtResource("9_8y1c4")
texture_hover = ExtResource("10_oru7d")
stretch_mode = 3

[node name="Label" type="Label" parent="Background/VBoxContainer/Button_empezar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.251
anchor_top = 0.168
anchor_right = 0.749
anchor_bottom = 0.832
offset_left = -0.110016
offset_right = 0.109985
grow_horizontal = 2
grow_vertical = 2
text = "START"
label_settings = ExtResource("11_njyvy")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
text_direction = 1

[node name="Button_opciones" type="TextureButton" parent="Background/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8_rsdn2")
texture_pressed = ExtResource("9_8y1c4")
texture_hover = ExtResource("10_oru7d")
stretch_mode = 3

[node name="Label" type="Label" parent="Background/VBoxContainer/Button_opciones"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.249
anchor_top = 0.168
anchor_right = 0.741
anchor_bottom = 0.832
offset_left = 0.109985
offset_right = 5.98996
text = "OPTIONS"
label_settings = ExtResource("11_njyvy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_salir" type="TextureButton" parent="Background/VBoxContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("8_rsdn2")
texture_pressed = ExtResource("9_8y1c4")
texture_hover = ExtResource("10_oru7d")
stretch_mode = 3

[node name="Label" type="Label" parent="Background/VBoxContainer/Button_salir"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.249
anchor_top = 0.168
anchor_right = 0.741
anchor_bottom = 0.832
offset_left = 0.109985
offset_right = 5.98996
text = "EXIT"
label_settings = ExtResource("11_njyvy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TutorialPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Salto" type="VideoStreamPlayer" parent="TutorialPanel"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.117
anchor_top = 0.087
anchor_right = 0.617
anchor_bottom = 0.642
offset_left = 0.23999
offset_top = 39.36
offset_right = 640.24
offset_bottom = 359.76
scale = Vector2(0.5, 0.5)
stream = ExtResource("12_scw4j")
autoplay = true
loop = true

[node name="DobleSalto" type="VideoStreamPlayer" parent="TutorialPanel"]
layout_mode = 0
offset_left = 829.0
offset_top = 102.0
offset_right = 2109.0
offset_bottom = 822.0
scale = Vector2(0.5, 0.5)
stream = ExtResource("13_upulp")
autoplay = true
loop = true

[node name="Marco" type="TextureRect" parent="TutorialPanel"]
modulate = Color(0, 1, 0.313726, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("14_kp23d")

[node name="Button_empezarLvl" type="TextureButton" parent="TutorialPanel"]
layout_mode = 0
offset_left = 513.0
offset_top = 610.0
offset_right = 863.0
offset_bottom = 735.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("8_rsdn2")
texture_pressed = ExtResource("9_8y1c4")
texture_hover = ExtResource("10_oru7d")
stretch_mode = 3

[node name="Label" type="Label" parent="TutorialPanel/Button_empezarLvl"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.098
anchor_top = 0.168
anchor_right = 0.898
anchor_bottom = 0.824
offset_left = -0.0143394
offset_top = -1.00002
offset_right = -0.0143433
offset_bottom = -1.52588e-05
theme_override_fonts/font = ExtResource("15_wu85y")
text = "NEXT"
label_settings = ExtResource("11_njyvy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackText01" type="TextureRect" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.031
anchor_bottom = 0.056
offset_left = 117.0
offset_top = 475.0
offset_right = 427.32
offset_bottom = 559.68
texture = ExtResource("8_rsdn2")

[node name="Label_saltoSimple" type="Label" parent="TutorialPanel/BackText01"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.086
anchor_top = 0.16
anchor_right = 0.92
anchor_bottom = 0.824
offset_left = -0.1
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_wu85y")
theme_override_font_sizes/font_size = 24
text = "Press (spacebar) to do a simple jump "
label_settings = ExtResource("16_yromt")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BackText02" type="TextureRect" parent="TutorialPanel"]
layout_mode = 0
offset_left = 789.0
offset_top = 475.0
offset_right = 1162.0
offset_bottom = 600.0
texture = ExtResource("8_rsdn2")

[node name="Label_saltoDoble" type="Label" parent="TutorialPanel/BackText02"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.086
anchor_top = 0.16
anchor_right = 0.92
anchor_bottom = 0.824
offset_left = -1.1
offset_top = -21.0
offset_right = -2.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0.411765, 0.411765, 0.411765, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("15_wu85y")
theme_override_font_sizes/font_size = 24
text = "Press and keep (spacebar) to do a higher jump"
label_settings = ExtResource("16_yromt")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="IntroPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="IntroPanel"]
modulate = Color(0, 1, 0.313726, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.00012207
offset_top = 6.10352e-05
offset_right = 0.00012207
offset_bottom = 6.10352e-05
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_73agi")

[node name="Button_tutorial" type="TextureButton" parent="IntroPanel"]
layout_mode = 0
offset_left = 980.0
offset_top = 580.0
offset_right = 1330.0
offset_bottom = 705.0
scale = Vector2(0.7, 0.7)
texture_normal = ExtResource("8_rsdn2")
texture_pressed = ExtResource("9_8y1c4")
texture_hover = ExtResource("10_oru7d")
stretch_mode = 3

[node name="Label" type="Label" parent="IntroPanel/Button_tutorial"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.098
anchor_top = 0.168
anchor_right = 0.898
anchor_bottom = 0.824
offset_left = -0.0143394
offset_top = -1.00002
offset_right = -0.0143433
offset_bottom = -1.52588e-05
text = "NEXT"
label_settings = ExtResource("11_njyvy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="IntroPanel"]
layout_mode = 0
offset_left = 228.0
offset_top = 164.0
offset_right = 1041.0
offset_bottom = 534.0
texture = SubResource("CanvasTexture_73agi")

[node name="Label" type="Label" parent="IntroPanel/TextureRect"]
layout_mode = 0
offset_left = 41.0
offset_top = -36.0
offset_right = 772.0
offset_bottom = 403.0
text = "You've been elected as the new President, congrats... I guess? So, now you're the one in charge of this whole shebang. You'll be calling the shots on our future, so, you know, try not to mess it up too badly. Your decisions? Yeah, they'll have consequences for us (potentially really, really bad ones...). Anyway, time to kick off your presidential adventure! Head on over to the Oval Office and start making those super important, life-altering decisions. ALL IS UP TO YOU. No pressure though! Good luck with that!"
label_settings = ExtResource("16_yromt")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="OpcionesPanel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label_volumenMusica" type="Label" parent="OpcionesPanel"]
layout_mode = 0
offset_left = 335.0
offset_top = 259.0
offset_right = 375.0
offset_bottom = 282.0
text = "Volumen de Musica"

[node name="MusicaSlider" type="HSlider" parent="OpcionesPanel"]
layout_mode = 0
offset_left = 400.0
offset_top = 370.0
offset_right = 408.0
offset_bottom = 386.0

[node name="Label2_volumenEfectos" type="Label" parent="OpcionesPanel"]
layout_mode = 0
offset_left = 789.0
offset_top = 261.0
offset_right = 942.0
offset_bottom = 284.0
text = "Volumen de efectos"

[node name="SfxSlider" type="HSlider" parent="OpcionesPanel"]
layout_mode = 0
offset_left = 868.0
offset_top = 363.0
offset_right = 876.0
offset_bottom = 379.0

[node name="Button_volver" type="Button" parent="OpcionesPanel"]
layout_mode = 0
offset_left = 601.0
offset_top = 594.0
offset_right = 670.0
offset_bottom = 625.0
text = "VOLVER"

[connection signal="pressed" from="Background/VBoxContainer/Button_empezar" to="." method="_on_button_empezar_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Button_opciones" to="." method="_on_button_opciones_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Button_salir" to="." method="_on_button_salir_pressed"]
[connection signal="pressed" from="TutorialPanel/Button_empezarLvl" to="." method="_on_button_empezar_lvl_pressed"]
[connection signal="pressed" from="IntroPanel/Button_tutorial" to="." method="_on_button_tutorial_pressed"]
[connection signal="pressed" from="OpcionesPanel/Button_volver" to="." method="_on_button_volver_pressed"]
